[package]
name = "rust_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "3.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34"
uuid = { version = "=1.7.0", features = ["v4", "serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = "=0.11.24"
url = "=2.4.1"
sha1 = "=0.10.6"
actix-http = "=2.2.1"
actix-router = "=0.5.1"
actix-utils = "=3.0.1"
bytestring = "=1.3.0"
time = "=0.2.27"
rand = "=0.8.5"
h2 = "=0.3.21"

[dev-dependencies]
actix-rt = "2"
